apps/base/media/jellyseer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseer
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - jellyseer.homelab
    secretName: jellyseer-homelab-tls
  rules:
  - host: jellyseer.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyseer
            port:
              number: 5055
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseer-public
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    # HTTPS entrypoint
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: requests.${BASE_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyseer
            port:
              number: 5055
  tls:
  - hosts:
    - requests.${BASE_DOMAIN}
